[package]
name = "ruffle4consoles"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.38.0", features = ["static-link", "use-pkgconfig"] }
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "aac",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", branch = "master" }
ruffle_render_glow = { path = "ruffle_render_glow" }
anyhow = "1.0"
glow = { git = "https://github.com/grovesNL/glow", branch = "main", features = []}
ron = "0.11.0"
serde = "1.0.225"
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-log = "0.2.0"
url = "2.5.7"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

[target.armv7-sony-vita-newlibeabihf.dependencies]
vitasdk-sys = { version = "0.3.2", features = [
    "SceLibKernel_stub",
    "SceKernelThreadMgr_stub",
    "SceSysmem_stub"
] }

[package.metadata.vita]
title_id = "RUFFLVITA"
title_name = "Ruffle"
assets = "static"
build_std = "std,panic_abort"

[package.metadata.vita.profile.vita]
strip_symbols = true

[profile.release]
debug = true

[profile.vita]
inherits = "release"
opt-level = 3
strip = "none"
debug = false
lto = true
panic = "abort"

[profile.switch]
inherits = "release"
opt-level = 3
strip = "none"
lto = true
panic = "abort"
