[package]
edition = "2021"
rust-version = "1.61.0"
name = "jpeg-decoder"
version = "0.3.2"
description = "JPEG decoder"
documentation = "https://docs.rs/jpeg-decoder"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/image-rs/jpeg-decoder"

[features]
default = ["rayon"]
nightly_aarch64_neon = []
platform_independent = []
force_immediate = []

[lib]
name = "jpeg_decoder"
path = "src/lib.rs"

[dependencies]
rayon = { version = "1.5.1", optional = true }
